--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:title" content="anime.js">
-  <meta property="og:url" content="http://animejs.com">
+  <meta property="og:url" content="//anime.js.cool">
   <meta property="og:description" content="Javascript Animation Engine">
-  <meta property="og:image" content="http://animejs.com/documentation/assets/img/icons/og.png">
+  <meta property="og:image" content="//anime.js.cool/documentation/assets/img/icons/og.png">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="anime.js">
   <meta name="twitter:site" content="@juliangarnier">
   <meta name="twitter:description" content="Javascript Animation Engine">
-  <meta name="twitter:image" content="http://animejs.com/documentation/assets/img/icons/twitter.png">
+  <meta name="twitter:image" content="//anime.js.cool/documentation/assets/img/icons/twitter.png">
   <link rel="apple-touch-icon-precomposed" href="documentation/assets/img/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="documentation/assets/img/icons/favicon.png" >
   <link href="documentation/assets/css/anime.css" rel="stylesheet">
@@ -122,40 +122,32 @@
   </div>
   <div class="info">
     <p class="description">
-      Javascript Animation Engine
+      Javascript 动画引擎
     </p>
     <div class="links">
       <a class="button blue" href="documentation" target="_blank">
         <svg viewBox="0 0 180 60">
           <path d="M10,10 C10,10 50,9.98999977 90,9.98999977 C130,9.98999977 170,10 170,10 C170,10 170.009995,20 170.009995,30 C170.009995,40 170,50 170,50 C170,50 130,50.0099983 90,50.0099983 C50,50.0099983 10,50 10,50 C10,50 9.98999977,40 9.98999977,30 C9.98999977,20 10,10 10,10 Z"></path>
         </svg>
-        <span>Documentation</span>
+        <span>文档</span>
       </a>
       <a class="button blue" href="https://codepen.io/collection/XLebem/" target="_blank">
         <svg viewBox="0 0 180 60">
           <path d="M10,10 C10,10 50,9.98999977 90,9.98999977 C130,9.98999977 170,10 170,10 C170,10 170.009995,20 170.009995,30 C170.009995,40 170,50 170,50 C170,50 130,50.0099983 90,50.0099983 C50,50.0099983 10,50 10,50 C10,50 9.98999977,40 9.98999977,30 C9.98999977,20 10,10 10,10 Z"></path>
         </svg>
-        <span>CodePen</span>
+        <span>示例</span>
       </a>
       <a class="button green" href="https://github.com/juliangarnier/anime" target="_blank">
         <svg viewBox="0 0 180 60">
           <path d="M10,10 C10,10 50,9.98999977 90,9.98999977 C130,9.98999977 170,10 170,10 C170,10 170.009995,20 170.009995,30 C170.009995,40 170,50 170,50 C170,50 130,50.0099983 90,50.0099983 C50,50.0099983 10,50 10,50 C10,50 9.98999977,40 9.98999977,30 C9.98999977,20 10,10 10,10 Z"></path>
         </svg>
-        <span>GitHub</span>
+        <span>源码</span>
       </a>
     </div>
     <p class="credits">
-      v<span class="version">0.0</span> © <span class="date">2016</span> <a href="http://juliangarnier.com" target="_blank">Julian Garnier</a>
+      v<span class="version">0.0</span> © <span class="date">2016</span> <a href="http://juliangarnier.com" target="_blank">Julian Garnier</a> 翻译: <a href="https://willin.wang/" target="_blank">Willin Wang</a>
     </p>
   </div>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-79927007-1', 'auto');
-    ga('send', 'pageview');
-  </script>
   <script src="anime.min.js"></script>
   <script src="documentation/assets/js/fireworks.js"></script>
   <script src="documentation/assets/js/site.js"></script>
