translate to chinese

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Documentation | anime.js</title>
+  <title>文档 | anime.js</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:title" content="anime.js">
-  <meta property="og:url" content="http://animejs.com">
+  <meta property="og:url" content="//anime.js.cool">
   <meta property="og:description" content="Javascript Animation Engine">
-  <meta property="og:image" content="http://animejs.com/documentation/assets/img/icons/og.png">
+  <meta property="og:image" content="//anime.js.cool/documentation/assets/img/icons/og.png">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="anime.js">
   <meta name="twitter:site" content="@juliangarnier">
   <meta name="twitter:description" content="Javascript Animation Engine">
-  <meta name="twitter:image" content="http://animejs.com/documentation/assets/img/icons/twitter.png">
+  <meta name="twitter:image" content="//anime.js.cool/documentation/assets/img/icons/twitter.png">
   <link rel="apple-touch-icon-precomposed" href="assets/img/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="assets/img/icons/favicon.png" >
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
@@ -24,7 +24,7 @@
 <body>
   <div class="content">
     <header class="header">
-      <a class="logo" href="https://github.com/juliangarnier/anime/"><h1>anime.js</h1></a>
+      <a class="logo" href="https://github.com/js-cool/anime.js.cool"><h1>anime.js</h1></a>
     </header>
     <section class="pane sidebar">
       <nav class="navigation"></nav>
@@ -34,11 +34,11 @@
 <!-- TARGETS -->
 <article id="targets" class="color-01">
   <header>
-    <h2 class="demos-title">Targets</h2>
+    <h2 class="demos-title">目标</h2>
   </header>
 
 <div id="cssSelector" class="demo">
-  <h3 class="demo-title">CSS Selector</h3>
+  <h3 class="demo-title">CSS 选择器</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -53,7 +53,7 @@
 </div>
 
 <div id="domNode" class="demo">
-  <h3 class="demo-title">DOM Node</h3>
+  <h3 class="demo-title">DOM 节点</h3>
   <div class="demo-content">
     <div class="large square shadow"></div>
     <div class="large square el"></div>
@@ -68,7 +68,7 @@ var domNode = anime({
 </div>
 
 <div id="nodeList" class="demo">
-  <h3 class="demo-title">Node List</h3>
+  <h3 class="demo-title">数组节点</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -93,7 +93,7 @@ var nodeList = anime({
 </div>
 
 <div id="JSobject" class="demo">
-  <h3 class="demo-title">JavaScript Object</h3>
+  <h3 class="demo-title">JS 对象</h3>
   <div class="demo-content">
     <pre>{"charged":"0"}</pre>
   </div>
@@ -113,7 +113,7 @@ var JSobject = anime({
 </div>
 
 <div id="JSarray" class="demo">
-  <h3 class="demo-title">JavaScript Array</h3>
+  <h3 class="demo-title">JS 数组</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -143,7 +143,7 @@ var JSarray = anime({
 <!-- ANIMATABLE PROPERTIES -->
 <article id="properties" class="color-02">
 <header>
-  <h2 class="demos-title">Properties</h2>
+  <h2 class="demos-title">属性</h2>
 </header>
 
 <div id="cssProperties" class="demo">
@@ -163,7 +163,7 @@ var JSarray = anime({
 </div>
 
 <div id="CSStransforms" class="demo">
-  <h3 class="demo-title">CSS Transforms</h3>
+  <h3 class="demo-title">CSS 动画</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -178,7 +178,7 @@ var JSarray = anime({
 </div>
 
 <div id="JSobjectProp" class="demo">
-  <h3 class="demo-title">Object properties</h3>
+  <h3 class="demo-title">对象属性</h3>
 <div class="demo-content"><pre>{"myProperty":"0"}</pre></div>
 <script>var myObject = {
   prop1: 0,
@@ -199,7 +199,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="domAttributes" class="demo">
-  <h3 class="demo-title">DOM Attributes</h3>
+  <h3 class="demo-title">DOM 特性</h3>
   <div class="demo-content">
     <input class="text-output" value="0"></input>
   </div>
@@ -213,7 +213,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="svgAttributes" class="demo">
-  <h3 class="demo-title">SVG Attributes</h3>
+  <h3 class="demo-title">SVG 特性</h3>
   <div class="demo-content align-center">
 <svg width="128" height="128" viewBox="0 0 128 128">
   <polygon points="64 68.64 8.574 100 63.446 67.68 64 4 64.554 67.68 119.426 100" fill="currentColor"/>
@@ -233,11 +233,11 @@ var JSobjectProp = anime({
 <!-- PROPERTY PARAMETERS -->
 <article id="propertyParameters" class="color-03">
   <header>
-    <h2 class="demos-title">Property parameters</h2>
+    <h2 class="demos-title">属性参数</h2>
   </header>
 
 <div id="duration" class="demo">
-  <h3 class="demo-title">Duration</h3>
+  <h3 class="demo-title">持续时间</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -251,7 +251,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="delay" class="demo">
-  <h3 class="demo-title">Delay</h3>
+  <h3 class="demo-title">延迟</h3>
   <div class="demo-content">
 <div class="square shadow"></div>
 <div class="square el"></div>
@@ -279,7 +279,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="specificPropertyParameters" class="demo">
-  <h3 class="demo-title">Specific property parameters</h3>
+  <h3 class="demo-title">具体参数</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -312,11 +312,11 @@ var JSobjectProp = anime({
 <!-- FUNCTION BASED PARAMETERS -->
 <article id="functionBasedParameters" class="color-04">
 <header>
-  <h2 class="demos-title">Function based parameters</h2>
+  <h2 class="demos-title"方法属性</h2>
 </header>
 
 <div id="functionBasedDuration" class="demo">
-  <h3 class="demo-title">Duration</h3>
+  <h3 class="demo-title">持续时间</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -344,7 +344,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="functionBasedDelay" class="demo">
-  <h3 class="demo-title">Delay</h3>
+  <h3 class="demo-title">延迟</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -372,7 +372,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="functionBasedElasticity" class="demo">
-  <h3 class="demo-title">Elasticity</h3>
+  <h3 class="demo-title">弹性</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -400,7 +400,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="combinedFunctionBasedProp" class="demo">
-  <h3 class="demo-title">Combined</h3>
+  <h3 class="demo-title">组合</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -444,11 +444,11 @@ var JSobjectProp = anime({
 <!-- ANIMATION PARAMETERS -->
 <article id="animationParameters" class="color-05">
   <header>
-    <h2 class="demos-title">Animation parameters</h2>
+    <h2 class="demos-title">动画参数</h2>
   </header>
 
 <div id="alternate" class="demo">
-  <h3 class="demo-title">Direction alternate</h3>
+  <h3 class="demo-title">交替方向</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -462,7 +462,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="reverse" class="demo">
-  <h3 class="demo-title">Direction reverse</h3>
+  <h3 class="demo-title">反转方向</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -476,7 +476,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="loop" class="demo">
-  <h3 class="demo-title">Loop (x times)</h3>
+  <h3 class="demo-title">循环（N次）</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -490,7 +490,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="loopAlternate" class="demo">
-  <h3 class="demo-title">Loop alternate (x times)</h3>
+  <h3 class="demo-title">交替循环（N次）</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -505,7 +505,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="loopReverse" class="demo">
-  <h3 class="demo-title">Loop reverse (x times)</h3>
+  <h3 class="demo-title">反转循环（N次）</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -520,7 +520,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="infiniteLoop" class="demo">
-  <h3 class="demo-title">Infinite loop</h3>
+  <h3 class="demo-title">无限循环</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -534,7 +534,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="infiniteLoopAlternate" class="demo">
-  <h3 class="demo-title">Infinite loop alternate</h3>
+  <h3 class="demo-title">无限交替循环</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -549,7 +549,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="infiniteLoopReverse" class="demo">
-  <h3 class="demo-title">Infinite loop reverse</h3>
+  <h3 class="demo-title">无限反转循环</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -569,11 +569,11 @@ var JSobjectProp = anime({
 <!-- VALUES -->
 <article id="values" class="color-06">
 <header>
-  <h2 class="demos-title">Values</h2>
+  <h2 class="demos-title">值</h2>
 </header>
 
 <div id="unitlessValue" class="demo">
-  <h3 class="demo-title">Unitless</h3>
+  <h3 class="demo-title">无单位</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -587,7 +587,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="specificUnitValue" class="demo">
-  <h3 class="demo-title">Specific unit</h3>
+  <h3 class="demo-title">指定单位</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -601,7 +601,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="relativeValues" class="demo">
-  <h3 class="demo-title">Relative</h3>
+  <h3 class="demo-title">相对</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el" style="transform: translateX(100px)"></div>
@@ -628,7 +628,7 @@ var JSobjectProp = anime({
 </div>
 
 <div id="colors" class="demo">
-  <h3 class="demo-title">Colors</h3>
+  <h3 class="demo-title">色彩</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -661,7 +661,7 @@ var colors = anime({
 </div>
 
 <div id="specificInitialValue" class="demo">
-  <h3 class="demo-title">Specific initial value</h3>
+  <h3 class="demo-title">指定初始值</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -677,7 +677,7 @@ var colors = anime({
 </div>
 
 <div id="functionBasedPropVal" class="demo">
-  <h3 class="demo-title">Function based values</h3>
+  <h3 class="demo-title">方法赋值</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -714,7 +714,7 @@ var colors = anime({
 </div>
 
 <div id="keyframes" class="demo">
-  <h3 class="demo-title">Keyframes</h3>
+  <h3 class="demo-title">关键帧</h3>
   <div class="demo-content">
     <div class="square shadow"></div>
     <div class="square el"></div>
@@ -754,11 +754,11 @@ var colors = anime({
 <!-- TIMELINE -->
 <article id="timeline" class="color-07">
 <header>
-  <h2 class="demos-title">Timeline</h2>
+  <h2 class="demos-title">时间轴</h2>
 </header>
 
 <div id="basicTimeline" class="demo">
-  <h3 class="demo-title">Basic timeline</h3>
+  <h3 class="demo-title">基本时间轴</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -796,7 +796,7 @@ basicTimeline
 </div>
 
 <div id="relativeOffset" class="demo">
-  <h3 class="demo-title">Relative offset</h3>
+  <h3 class="demo-title">相对补偿</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -836,7 +836,7 @@ relativeOffset
 </div>
 
 <div id="absoluteOffset" class="demo">
-  <h3 class="demo-title">Absolute offset</h3>
+  <h3 class="demo-title">绝对补偿</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -877,7 +877,7 @@ absoluteOffset
 </div>
 
 <div id="timelineParameters" class="demo">
-  <h3 class="demo-title">Timeline parameters</h3>
+  <h3 class="demo-title">时间参数</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -928,11 +928,11 @@ timelineParameters
 <!-- PLAYBACK -->
 <article id="playback" class="color-08">
 <header>
-  <h2 class="demos-title">Playback</h2>
+  <h2 class="demos-title">重放</h2>
 </header>
 
 <div id="playPause" class="demo controls">
-  <h3 class="demo-title">Play / Pause</h3>
+  <h3 class="demo-title">开始 / 暂停</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -967,7 +967,7 @@ document.querySelector('#playPause .pause').onclick = playPause.pause;
 </div>
 
 <div id="restartAnim" class="demo">
-  <h3 class="demo-title">Restart</h3>
+  <h3 class="demo-title">重新开始</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -999,7 +999,7 @@ document.querySelector('#restartAnim .restart').onclick = restartAnim.restart;
 </div>
 
 <div id="reverseAnim" class="demo controls">
-  <h3 class="demo-title">Reverse</h3>
+  <h3 class="demo-title">反转</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -1033,7 +1033,7 @@ document.querySelector('#reverseAnim .reverse').onclick = function() {
 </div>
 
 <div id="seekAnim" class="demo controls">
-  <h3 class="demo-title">Seek</h3>
+  <h3 class="demo-title">进度</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small square shadow"></div>
@@ -1068,7 +1068,7 @@ document.querySelector('#seekAnim .progress').oninput = function() {
 </div>
 
 <div id="TLcontrols" class="demo controls">
-  <h3 class="demo-title">Timeline controls</h3>
+  <h3 class="demo-title">播放控制</h3>
   <div class="demo-content">
     <div class="line">
       <div class="square shadow"></div>
@@ -1139,11 +1139,11 @@ controlsProgressEl.addEventListener('input', function() {
 <!-- CALLBACKS -->
 <article id="callbacks" class="color-09">
 <header>
-  <h2 class="demos-title">Callbacks</h2>
+  <h2 class="demos-title">回调函数</h2>
 </header>
 
 <div id="allCallbacks" class="demo">
-  <h3 class="demo-title">All callbacks</h3>
+  <h3 class="demo-title">所有</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log update-log"></input>
@@ -1194,7 +1194,7 @@ allCallbacks.complete = function() { completedLogEl2.value = 'completed'; };
 </div>
 
 <div id="update" class="demo">
-  <h3 class="demo-title">Update</h3>
+  <h3 class="demo-title">更新</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log current-time-log"></input>
@@ -1219,7 +1219,7 @@ var update = anime({
 </div>
 
 <div id="begin" class="demo">
-  <h3 class="demo-title">Begin</h3>
+  <h3 class="demo-title">开始</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log began-log" value="began : false"></input>
@@ -1248,7 +1248,7 @@ begin.update = function(anim) {
 </div>
 
 <div id="run" class="demo">
-  <h3 class="demo-title">Run</h3>
+  <h3 class="demo-title">播放</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log current-time-log"></input>
@@ -1281,7 +1281,7 @@ var run = anime({
 </div>
 
 <div id="complete" class="demo">
-  <h3 class="demo-title">Complete</h3>
+  <h3 class="demo-title">完成</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log completed-log" value="completed : false"></input>
@@ -1314,11 +1314,11 @@ complete.update = function(anim) {
 <!-- PROMISES -->
 <article id="promises" class="color-10">
 <header>
-  <h2 class="demos-title">Promises</h2>
+  <h2 class="demos-title">Promise</h2>
 </header>
 
 <div id="finishedPromise" class="demo">
-  <h3 class="demo-title">Finished</h3>
+  <h3 class="demo-title">完成</h3>
   <div class="demo-content">
     <div class="logs">
       <input class="log finished-log"></input>
@@ -1363,7 +1363,7 @@ finishedPromise.update = function(anim) {
 </header>
 
 <div id="motionPath" class="demo">
-  <h3 class="demo-title">Motion path</h3>
+  <h3 class="demo-title">运动路径</h3>
   <div class="demo-content">
     <div class="motion-path">
       <div class="small square shadow follow-path"></div>
@@ -1389,7 +1389,7 @@ var motionPath = anime({
 </div>
 
 <div id="morphing" class="demo">
-  <h3 class="demo-title">Morphing</h3>
+  <h3 class="demo-title">变形</h3>
   <div class="demo-content align-center">
     <svg width="140" height="140" viewBox="0 0 140 140">
       <g fill="none" fill-rule="evenodd">
@@ -1420,7 +1420,7 @@ var motionPath = anime({
 </div>
 
 <div id="lineDrawing" class="demo">
-  <h3 class="demo-title">Line drawing</h3>
+  <h3 class="demo-title">素描</h3>
   <div class="demo-content align-center">
     <svg viewBox="0 0 280 100">
       <g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="1" class="lines">
@@ -1453,11 +1453,11 @@ var motionPath = anime({
 <!-- EASINGS -->
 <article id="easings" class="color-12">
   <header>
-    <h2 class="demos-title">Easings</h2>
+    <h2 class="demos-title">Easing</h2>
   </header>
 
 <div id="penner" class="demo">
-  <h3 class="demo-title">Built in equations</h3>
+  <h3 class="demo-title">内置方程式</h3>
   <div class="demo-content">
     <div class="line">
       <div class="small stretched square shadow"></div>
@@ -1666,7 +1666,7 @@ penner
 </div>
 
 <div id="elasticity" class="demo">
-  <h3 class="demo-title">Elasticity</h3>
+  <h3 class="demo-title">弹性</h3>
   <div class="demo-content">
     <div class="line">
       <div class="stretched square shadow"></div>
@@ -1773,7 +1773,7 @@ elasticity.add({
 </div>
 
 <div id="customBezier" class="demo">
-  <h3 class="demo-title">Custom Bézier curves</h3>
+  <h3 class="demo-title">贝塞尔曲线</h3>
   <div class="demo-content">
     <div class="square large shadow"></div>
     <div class="square large el"></div>
@@ -1787,7 +1787,7 @@ elasticity.add({
 </div>
 
 <div id="customEasingFunction" class="demo">
-  <h3 class="demo-title">Custom easing function</h3>
+  <h3 class="demo-title">自定义方法</h3>
   <div class="demo-content">
     <div class="square large shadow"></div>
     <div class="square large el"></div>
@@ -1823,14 +1823,6 @@ var customEasingFunction = anime({
       </div>
     </section>
   </div>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-79927007-1', 'auto');
-    ga('send', 'pageview');
-  </script>
   <script src="assets/js/highlight.pack.js"></script>
   <script src="assets/js/beautify-html.js"></script>
   <script src="assets/js/scripts.js"></script>
