--- a/documentation/index.html
+++ b/documentation/index.html
@@ -312,7 +312,7 @@ var JSobjectProp = anime({
 <!-- FUNCTION BASED PARAMETERS -->
 <article id="functionBasedParameters" class="color-04">
 <header>
-  <h2 class="demos-title"方法属性</h2>
+  <h2 class="demos-title">方法属性</h2>
 </header>
 
 <div id="functionBasedDuration" class="demo">
