--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>anime.js</title>
+  <title>Anime.js</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:title" content="anime.js">
   <meta property="og:url" content="//anime.js.cool">
   <meta property="og:description" content="Javascript Animation Engine">
   <meta property="og:image" content="//anime.js.cool/documentation/assets/img/icons/og.png">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="anime.js">
-  <meta name="twitter:site" content="@juliangarnier">
-  <meta name="twitter:description" content="Javascript Animation Engine">
-  <meta name="twitter:image" content="//anime.js.cool/documentation/assets/img/icons/twitter.png">
   <link rel="apple-touch-icon-precomposed" href="documentation/assets/img/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="documentation/assets/img/icons/favicon.png" >
   <link href="documentation/assets/css/anime.css" rel="stylesheet">
@@ -137,7 +132,7 @@
         </svg>
         <span>示例</span>
       </a>
-      <a class="button green" href="https://github.com/juliangarnier/anime" target="_blank">
+      <a class="button green" href="https://github.com/js-cool/anime.js.cool" target="_blank">
         <svg viewBox="0 0 180 60">
           <path d="M10,10 C10,10 50,9.98999977 90,9.98999977 C130,9.98999977 170,10 170,10 C170,10 170.009995,20 170.009995,30 C170.009995,40 170,50 170,50 C170,50 130,50.0099983 90,50.0099983 C50,50.0099983 10,50 10,50 C10,50 9.98999977,40 9.98999977,30 C9.98999977,20 10,10 10,10 Z"></path>
         </svg>
